# paralink-substrate

./: Cargo.toml  Makefile  README.md  aura-testnet.json  docker-compose.yml  types.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs  tests.rs
pallets/quorum/: Cargo.toml
pallets/quorum/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
playground/: nginx.conf  rpc.py  rpc_testnet.py
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: init.sh
