[package]
name = "quorum"
version = "2.0.0"
edition = "2018"
authors = ['Paralink Network']
repository = 'https://github.com/paralink-network/paralink-substrate'
description = "Relayer Quorum logic lives here"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.3.0' }

# Substrate packages
frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
sp-core = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }

balances = { package = 'pallet-balances', version = '2.0.0', default-features = false }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'balances/std',
]
