[package]
name = "pallet-quorum"
version = "3.0.0"
edition = "2018"
authors = ['Paralink Network']
repository = 'https://github.com/paralink-network/paralink-substrate'
description = "Relayer Quorum logic lives here"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '2.0.0' }

# Substrate packages
frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }
sp-core = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false }

balances = { package = 'pallet-balances', version = '3.0.0', default-features = false }

serde = { default-features = false, optional = true, features = ['derive'], version = '^1' }

[features]
default = ['std']
std = [
	'serde',
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'balances/std',
]
